# todoo-app

./: .env  README.md  pyproject.toml
todoo-app/: fastneon.py  main.py
todooo_app/: fastneon.py  main.py
