[tool.poetry]
name = "too-do-app"
version = "0.1.0"
description = ""
authors = ["Hatimnofear <hatimnofear@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pytest = "^8.1.1"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
todo = "^0.1"
python-multipart = "^0.0.9"
psycopg2 = "^2.9.9"
psycopg = "^3.1.18"
sqlmodel = "^0.0.16"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
